--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 
 # Precompiled Headers
 *.gch
-*.pch
+*.pchsd
 
 # Compiled Dynamic libraries
 *.so
@@ -30,3 +30,6 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio cache/options directory
+.vs/
